# pantomime

./: .clang-format  CMakeLists.txt  README.md
.github/workflows/: build.yml  fetch.yml
include/pantomime/: mime.hpp
src/: db.hpp  fetcher.cpp  mime.cpp
